add margin-top for section

--- a/styles.scss
+++ b/styles.scss
@@ -145,6 +145,7 @@ border-radius: 0 !important;
 div#orderForm\:wzd_content,
 div#orderForm\:prtcatpnl,
 div#orderForm\:slctpdtpnl,
+div#orderForm\:chdcatpnl,
 div#orderForm\:bskpgtop{
     margin-top: 4rem !important;
 }
