add page for mobile

--- a/javax.faces.resource/theme.css
+++ b/javax.faces.resource/theme.css
@@ -1036,7 +1036,7 @@
 }
 
 .ui-button .ui-icon {
-    background-image: url("/javax.faces.resource/images/ui-icons_ffffff_256x240.png.jsf?ln=primefaces-omega")
+    background-image: url("https://nisade.evoke.jp/javax.faces.resource/images/ui-icons_ffffff_256x240.png.jsf?ln=primefaces-omega")
 }
 
 .ui-dialog {
