--- a/styles.scss
+++ b/styles.scss
@@ -454,10 +454,27 @@ button#orderForm\:next{
 /* ennd cart section */
 
 /* begin dialog section */
-form#orderForm{
+.ui-dialog-buttonpane{
+    button#cdYes, button#cdNo{
+        padding-right: 0 !important;
+
+        .ui-button-text.ui-c{
+            background-color: $secondary-orange-color;
+            color: white !important;
+        }
+        
+    }
+}
+
+form#orderForm,
+div#confirmdlg{
     display: flex;
     justify-content: center;
     // align-items: center;
+
+    .ui-confirm-dialog-message{
+        @include body-text();
+    }
 
     .ui-dialog-content.ui-widget-content{
         padding: 1.2em !important;
@@ -467,6 +484,12 @@ form#orderForm{
         left: auto !important;
         top: 50% !important;
         transform: translateY(-50%);
+    }
+
+    .ui-dialog-content{
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     // header
@@ -558,9 +581,6 @@ form#orderForm{
 
 
 // form
-.ui-state-focus, .ui-widget-content .ui-state-focus{
-    background-color: transparent !important;
-}
 
 .flex-option{
     padding: 4px 0 !important;
