add padding for button

--- a/styles.scss
+++ b/styles.scss
@@ -124,6 +124,10 @@ html .ui-corner-all{
 border-radius: 0 !important;
 }
 
+.ui-button {
+    padding: 0.5rem 1rem;
+}
+
 // icon
 .fa-edit:before, 
 .fa-pencil-square-o:before,
