--- a/styles.scss
+++ b/styles.scss
@@ -313,6 +313,9 @@ html .rb-h-selwrapper {
     line-height: 26px;
 }
 
+.rb-child-cat-item {
+    max-width: none !important;
+}
 
 // choose item-active
 .rb-vendor-container .rb-vendor-sel a img, 
