--- a/styles.scss
+++ b/styles.scss
@@ -660,6 +660,9 @@ div#orderForm\:addbskpg{
     //     }
 
     // }
+    .ui-datatable-reflow .ui-datatable-data td[role="gridcell"]:not(.ui-helper-hidden) {
+        display: block !important;
+    }
 
     .flex-option{
         padding: 8px 4px;
