--- a/styles.scss
+++ b/styles.scss
@@ -309,6 +309,7 @@ html .rb-h-selwrapper {
 
 .rb-prod-desc-item:nth-child(2) label{
     @include body-text();
+    @include black-text();
     font-weight: 400!important;
     line-height: 26px;
 }
@@ -839,4 +840,8 @@ _::-webkit-full-page-media, _:future, :root .safari_only {
         width: 100%;
         display: block;
     }
+}
+
+.rb-vendor-desc{
+    @include black-text();
 }
