--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,7 @@
 // font 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
-@import url('https://fonts.cdnfonts.com/css/delmon-delicate');
-@import url('https://fonts.cdnfonts.com/css/microsoft-yahei');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 
 $primary-sea-color: #79A2AA;
 $primary-brown-color: #625956;
@@ -20,11 +20,13 @@ $dark-grey: #66686A;
 $link-color:#3388CC;
 
 @mixin main-font{
-    font-family: Montserrat !important;
+    font-family: Inter !important;
 }
+
 @mixin second-font{
-    font-family: Delmon Delicate !important;
+    font-family: Archivo !important;
 }
+
 
 @mixin small-title {
     font-size: 6px !important;
@@ -35,7 +37,6 @@ $link-color:#3388CC;
 }
 
 @mixin header {
-    font-family: Montserrat;
     font-size: 18px !important;
     font-weight: 400;
     line-height: 22px;
@@ -43,27 +44,23 @@ $link-color:#3388CC;
 }
 
 @mixin sub-header{
-    font-family: Delmon Delicate !important;
     font-size: 20px !important;
     font-weight: 400;
 }
 
 @mixin body-text{
-    font-family: Montserrat;
     font-size: 16px !important;
     font-weight: 400;
     line-height: 26px;
 }
 
 @mixin caption{
-    font-family: Montserrat;
     font-size: 14px !important;
     font-weight: 300;
     line-height: 17px;
 }
 
 @mixin title{
-    font-family: Montserrat;
     font-size: 12px !important;
     font-weight: 400;
     line-height: 17px;
@@ -103,6 +100,10 @@ $link-color:#3388CC;
     @include main-font();
     margin: 0;
     padding: 0;
+}
+
+html .ui-button-text{
+    @include second-font();
 }
 
 body{
@@ -178,6 +179,10 @@ div#orderForm\:bskpgtop{
 
 .vc-chip-container .ui-button.ui-widget.chip{
     padding: 0.5rem 1rem;
+
+    span{
+        @include second-font();
+    }
 }
 
 form#locform{
@@ -220,6 +225,10 @@ html .ui-selectonemenu .ui-selectonemenu-trigger .ui-icon{
 }
 html .vc-chip-container .chip {
     @include body-text();
+
+    span{
+        @include second-font();
+    }
 }
 
 .chip.selected{
@@ -253,6 +262,8 @@ html .vc-chip-container .chip {
 .rb-basket-title{
     @include sub-header();
     @include black-text();
+    @include second-font();
+    font-weight: 700;
     font-size: 22px !important;
 }
 
@@ -277,6 +288,7 @@ html[lang="en"] #orderForm:vndcat button{
 
     label{
         @include body-text();
+        @include second-font();
         font-weight: 500 !important;
     }
 
@@ -350,9 +362,7 @@ img[id*="pdtimg"] {
         &:first-child{
             label{
                 @include header();
-                font {
-                    font-family: Delmon Delicate !important;
-                }
+                @include second-font();
             }
         }
 
@@ -363,7 +373,7 @@ img[id*="pdtimg"] {
             font-weight: 400!important;
 
             span{
-                @include caption;
+                @include title();
             }
         }
         span.ui-button-text.ui-c{
@@ -462,9 +472,10 @@ div#orderForm\:bskpnl_footer{
 button#orderForm\:apply,
 button#orderForm\:next{
     @include button();
-    @include caption();
+    font-size: 12px;
 
     span{
+        @include caption();
         padding: 0 !important;
     }
 }
@@ -531,6 +542,7 @@ div#confirmdlg{
 
         .ui-dialog-title{
             @include black-text();
+            @include second-font();
             margin: 0 !important;
         }
     }
@@ -733,6 +745,7 @@ html .ui-datepicker{
 label#orderForm\:existglbl,
 label#orderForm\:newguestlbl{
     @include sub-header();
+    @include second-font();
 }
 
 label#orderForm\:newguesttxt,
@@ -744,7 +757,7 @@ button#orderForm\:ngbut,
 button#orderForm\:sendvercode,
 button#orderForm\:gcontshop{
     @include button;
-    @include caption();
+    @include title();
 }
 
 button#orderForm\:gcontshop {
