--- a/styles.scss
+++ b/styles.scss
@@ -418,6 +418,7 @@ div#orderForm\:itemdtbsk{
             .ui-column-title{
                 @include black-text();
                 @include title(); 
+                @include second-font();
                 font-weight: 500;
                 text-transform: uppercase;
                 line-height: 19px;
