--- a/styles.scss
+++ b/styles.scss
@@ -762,10 +762,23 @@ button#orderForm\:gcontshop{
 }
 
 button#orderForm\:gcontshop {
+    width: 40px;
+    height: 40px;
+    border-radius: 50% !important;
+    background-color: $secondary-light-grey-color !important;
     padding: 1rem 0 1rem 1rem !important;
     
+    .fa-arrow-left{
+        left: 50%;
+        transform: translate(-50%, -50%) !important;
+    }
+
     .ui-button-text-icon-left .ui-button-text {
         padding: 0.3em 1em;
+    }
+
+    span.ui-button-text{
+        display: none;
     }
 }
 
